echoserver/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: echo-dep
  labels:
    app: echo-dep
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: echo-dep
  type: LoadBalancer
